bases de path de dashboard

--- a/JL/src/app/old/app.component.html
+++ b/JL/src/app/old/app.component.html
@@ -481,5 +481,5 @@
   <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
   <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
   
-  <router-outlet></router-outlet>
+  //<router-outlet></router-outlet>
   
