--- a/JL/src/app/dashBoard/components/dash-board.component.html
+++ b/JL/src/app/dashBoard/components/dash-board.component.html
@@ -2,7 +2,8 @@
 <mat-sidenav-container class="container">
   <mat-sidenav #sidenav mode="side" [(opened)]="opened">
     <mat-nav-list>
-      <a mat-list-item routerLink="." *ngFor="let nav of menus">{{ nav }}</a>
+        <img src="./sda.jpg" alt="logo JL" />
+      <a mat-list-item *ngFor="let nav of menus">{{ nav }}</a>
     </mat-nav-list>
   </mat-sidenav>
 
@@ -13,7 +14,7 @@
       <mat-icon>menu</mat-icon>
     </button>
 
-      <img src="./sda.jpg" alt="logo empresa" />
+      
       <span class="example-spacer"></span>
       <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
         <mat-icon>home</mat-icon>
