quedo una belleza ese menu pri

--- a/JL/src/app/dashBoard/components/dash-board.component.html
+++ b/JL/src/app/dashBoard/components/dash-board.component.html
@@ -1,24 +1,44 @@
-
-<mat-sidenav-container class="container">
-  <mat-sidenav #sidenav mode="side" [(opened)]="opened">
+<mat-sidenav-container class="container" autosize >
+  <mat-sidenav #sidenav mode="side" [(opened)]="opened" class="primary-color main-sidenav nav- 
+  shadow">
     <mat-nav-list>
-        <img src="./sda.jpg" alt="logo JL" />
         
-        <div *ngFor="let nav of menus">
-          <app-menu-list-item [item]="nav" [depth]="0"></app-menu-list-item>
-        </div>
+      
+          <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="example-tree">
+            <mat-tree-node *matTreeNodeDef="let node" [disabled]="true" matTreeNodeToggle>
+              <mat-list-item class="mat-tree-node" matTreeNodeToggle (click)="navigate(node)">
+                {{node.name}}
+              </mat-list-item>
+            </mat-tree-node>
+            <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild" [disabled]="true">
+                  <mat-list-item class="mat-tree-node" matTreeNodeToggle   (click)="navigate(node)">
+                  <button mat-icon-button 
+                          [attr.aria-label]="'Toggle ' + node.name">
+                    <mat-icon class="mat-icon-rtl-mirror">
+                      {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+                    </mat-icon>
+                  </button>
+                  {{node.name}}
+                </mat-list-item>
+                
+                <div [class.example-tree-invisible]="!treeControl.isExpanded(node)"
+                    role="group">
+                  <ng-container matTreeNodeOutlet></ng-container>
+              </div>
+            </mat-nested-tree-node>
+          </mat-tree>
       
     </mat-nav-list>
   </mat-sidenav>
 
   <mat-sidenav-content class="container">
-    <mat-toolbar color="primary">
+    <mat-toolbar color="primary" class="toolbar">
       <button mat-icon-button (click)="sidenav.toggle()" class="example-icon"
       aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
-
-      
+    <img src="logo.jpg" alt="logo JL" />
+    
       <span class="example-spacer"></span>
       <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
         <mat-icon>home</mat-icon>
@@ -31,7 +51,7 @@
       </button>
     </mat-toolbar>
     <router-outlet>
-        <h1>sda</h1>
+      
     </router-outlet>
   </mat-sidenav-content>
 
