componentes de estudio

--- a/JL/src/app/dashBoard/components/estudio/estudio.component.html
+++ b/JL/src/app/dashBoard/components/estudio/estudio.component.html
@@ -1,18 +1,13 @@
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-    <!-- This is the tree node template for leaf nodes -->
-    <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-        <!-- use a disabled button to provide padding for tree leaf -->
-        <button mat-icon-button disabled></button>
-        {{node.name}}
-    </mat-tree-node>
-    <!-- This is the tree node template for expandable nodes -->
-    <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
-        <button mat-icon-button matTreeNodeToggle
-                [attr.aria-label]="'Toggle ' + node.name">
-        <!-- <mat-icon class="mat-icon-rtl-mirror">
-            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-        </mat-icon> -->
-        </button>
-        {{node.name}}
-    </mat-tree-node>
-    </mat-tree>
+<div class="wrapper">
+    <div class="one">
+        <app-repasos-dash></app-repasos-dash>
+    </div>
+    <div class="two">
+        <app-examenes-dash></app-examenes-dash>
+    </div>
+  </div>
+  <div class="three">
+    <app-materia-dash></app-materia-dash>
+</div>
+
+
